# WatsonApp

./: LICENSE  README.md  base.py  dockerfile  main.py  models.py  pyproject.toml  settings.py
application/: bot.py  containers.py  dispatcher.py  exceptions.py  handlers.py  messages.py  models.py  repositories.py  serializers.py  services.py
application/tests/: conftest.py  test_handlers.py
components/: base.py  queue.py
migrations/: env.py
migrations/versions/: 057553ba5297_init_db.py  1eb116fac4d3_init_db.py  645bfbecd635_init_db.py
